--- a/src/_includes/subscription-form.html
+++ b/src/_includes/subscription-form.html
@@ -1,10 +1,10 @@
 <aside
-  class="font-sans p-4 text-base max-w-md o-center o-stack text-gray-800 bg-gray-100 sm:rounded-md "
+  class="font-sans p-4 text-base max-w-md o-center o-stack text-gray-800 bg-gray-100 sm:rounded-md"
   aria-labelledby="subscribe-and-stay-in-the-loop"
 >
   <div>
     <h2 id="subscribe-and-stay-in-the-loop" class="font-bold u-no-indent sm:text-center">
-      <div aria-hidden="true" class="hidden text-4xl sm:block">📮</div> 
+      <span aria-hidden="true" class="text-4xl sm:block">📮</span>
       Stay in the loop!
     </h2>
   </div>
@@ -17,40 +17,36 @@
     aria-live="polite"
   >
     <div>
-      <div hidden aria-hidden="true">
-        <label>
-          Don’t fill this out if you're human:
-          <input name="bot-field" />
-        </label>
+      <div hidden>
+        <label for="subscriptionBotField"> Don’t fill this out if you're human: </label>
+        <input id="subscriptionBotField" name="bot-field" />
       </div>
 
-      <label class="text-sm text-gray-600"
-        >Your email address
-        <div class="sm:flex">
-          <input
-            type="email"
-            name="email"
-            id="email"
-            class="block sm:max-w-xs w-full px-4 py-3 text-base appearance-none border border-gray-300 shadow-none bg-white text-blue-900 rounded-md placeholder-gray-400 focus:outline-none focus:ring focus:border-blue-300 sm:rounded-none sm:rounded-l-md"
-            required
-          />
-          <button
-            type="submit" 
-            class="mt-4 relative sm:mt-0 sm:h-auto block w-full sm:w-auto border border-blue-600 px-6 py-3 text-base font-semibold leading-snug bg-blue-600 text-white rounded-md sm:rounded-none sm:rounded-r-md shadow-md hover:bg-blue-500 focus:outline-none focus:bg-blue-500 transition ease-in-out duration-150"
-          >
-            Subscribe
-          </button>
-        </div>
-      </label>
+      <label for="subscriptionEmail" class="text-sm text-gray-600"> Your email address </label>
+      <div class="sm:flex">
+        <input
+          id="subscriptionEmail"
+          type="email"
+          name="subscription-email"
+          class="block sm:max-w-xs w-full px-4 py-3 text-base appearance-none border border-gray-300 shadow-none bg-white text-blue-900 rounded-md placeholder-gray-400 focus:outline-none focus:ring focus:border-blue-300 sm:rounded-none sm:rounded-l-md"
+          required
+        />
+        <button
+          type="submit"
+          class="mt-4 relative sm:mt-0 sm:h-auto block w-full sm:w-auto border border-blue-600 px-6 py-3 text-base font-semibold leading-snug bg-blue-600 text-white rounded-md sm:rounded-none sm:rounded-r-md shadow-md hover:bg-blue-500 focus:outline-none focus:bg-blue-500 transition ease-in-out duration-150"
+        >
+          Subscribe
+        </button>
+      </div>
     </div>
   </form>
 
   <script>
     const processForm = (form) => {
       const data = new FormData(form);
-      data.append("form-name", "newsletter");
-      fetch("/", {
-        method: "POST",
+      data.append('form-name', 'newsletter');
+      fetch('/', {
+        method: 'POST',
         body: data,
       })
         .then(() => {
@@ -61,9 +57,9 @@
         });
     };
 
-    const emailForm = document.querySelector(".email-form");
+    const emailForm = document.querySelector('.email-form');
     if (emailForm) {
-      emailForm.addEventListener("submit", (e) => {
+      emailForm.addEventListener('submit', (e) => {
         e.preventDefault();
         processForm(emailForm);
       });
