Service worker first iteration (#123)

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -15,6 +15,6 @@ socialImg: /assets/img/of-sailing-ships-velociraptors-and-walking-on-the-moon/he
       {% include "subscription-form.html" %}
     {% endif%}
     {% include 'footer.html' %}
-    {% include 'analytics.html' %}
+    {% include 'scripts.html' %}
   </body>
 </html>
