--- a/src/service-worker.js.njk
+++ b/src/service-worker.js.njk
@@ -1,7 +1,8 @@
-// ---
-// eleventyExcludeFromCollections: true
-// permalink: /service-worker.js
-// ---
+---
+eleventyExcludeFromCollections: true
+permalink: /service-worker.js
+---
+
 
 const version = 'v0.0.1';
 
@@ -19,6 +20,7 @@ addEventListener('install', (installEvent) => {
       .then((staticCache) => {
         staticCache.addAll(['/apple-touch-icon.png']);
         return staticCache.addAll([
+          // @todo add fonts
           '/assets/styles/style.min.css',
           '/confirmed.html',
           'offline.html',
@@ -33,37 +35,50 @@ addEventListener('fetch', (fetchEvent) => {
   const request = fetchEvent.request;
 
   // is blogpost?
+
   if (request.url.includes('/blog/')) {
+    // When the requested page is an article
     fetchEvent.respondWith(
-      caches
-        .match(request)
-        .then((responseFromCache) => {
-          if (responseFromCache) {
-            fetchEvent.waitUntil(fetch(request)).then((responseFromFetch) => {
+      // Look in the cache
+      caches.match(request).then((responseFromCache) => {
+        if (responseFromCache) {
+          // Fetch a fresh version from the network
+          fetchEvent.waitUntil(
+            fetch(request).then((responseFromFetch) => {
+              // Update the cache
               caches.open(pagesCacheName).then((pagesCache) => {
                 return pagesCache.put(request, responseFromFetch);
               });
-            });
-            return responseFromCache;
-          }
-          return fetch(request).then((responseFromFetch) => {
-            const clone = responseFromCache.clone();
+            })
+          );
+          return responseFromCache;
+        }
+        // Otherwise fetch the page from the network
+        return fetch(request)
+          .then((responseFromFetch) => {
+            // Put a copy in the cache
+            const copy = responseFromFetch.clone();
             fetchEvent.waitUntil(
               caches.open(pagesCacheName).then((pagesCache) => {
-                return pagesCache.put(request, clone);
+                return pagesCache.put(request, copy);
               })
             );
             return responseFromFetch;
+          })
+          .catch((error) => {
+            // Otherwise show the fallback page
+            return caches.match('/offline.html');
           });
-        })
-        .catch((error) => {
-          return caches.match('/offline.html');
-        })
+      })
     );
+    return;
   }
 
   // is HTML?
   if (request.headers.get('Accept').includes('text/html')) {
+    if (request.url.includes('/blog/')) {
+      //@TODO keep going here
+    }
     fetchEvent.respondWith(
       fetch(request)
         .then((responseFromFetch) => {
