Lighthouse recognizes a PWA

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -8,12 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="google-site-verification" content="5Z_KiijxY41bgn9up8h0wpo_2REAC199OsmISONScjY" />
-  <meta name="theme_color" color="{{ site.themeColor }}" />
+  <meta name="theme-color" content="{{ site.themeColor }}" />
   {%- include "meta.html" %}
 
   <style>{{ css | safe }}</style> 
 
   <link rel="manifest" href="/app.webmanifest">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+  <link rel="icon" href="{{ site.favicon }}">
+  <link rel="mask-icon" href="{{ site.favicon }}" color="{{ site.themeColor }}">
+  <link rel="apple-touch-icon" href="{{ site.icon.url }}">
+  
 </head> 
