--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -4,7 +4,7 @@ socialImg: /assets/img/of-sailing-ships-velociraptors-and-walking-on-the-moon/he
 ---
 
 <!DOCTYPE html>
-<html lang="en-US" dir="ltr">
+<html lang="{{ site.language }}" dir="{{ site.directionality }}">
   {% include 'head.html' %}
   <body
     class="text-base sm:text-lg md:text-xl overflow-x-hidden home-font-features {% if bodyClass %}{{ bodyClass }}{% endif %}"
