--- a/src/assets/styles/components/_post.css
+++ b/src/assets/styles/components/_post.css
@@ -1,5 +1,5 @@
 .s-post .lede {
-  @apply text-lg font-medium font-sans border-t border-b border-gray-300 py-4;
+  @apply text-base md:text-lg font-medium font-sans border-t border-b border-gray-300 py-4;
 }
 
 .s-post a:link {
@@ -11,7 +11,7 @@
 }
 
 .s-post > blockquote {
-  @apply border-solid border-gray-300 border-l-4 px-5 py-2 my-10 bg-gray-100 font-serif text-xl;
+  @apply border-solid border-gray-300 border-l-4 px-5 py-2 my-10 bg-gray-100 font-serif sm:text-xl;
 }
 
 .s-post img {
@@ -27,7 +27,7 @@
 } */
 
 .s-post > h2 {
-  @apply text-xl text-gray-900 font-medium pt-4 mb-2;
+  @apply text-lg md:text-xl text-gray-900 font-medium pt-4 mb-2;
 }
 
 .s-post > ol,
