--- a/src/_includes/post-hero.html
+++ b/src/_includes/post-hero.html
@@ -1,12 +1,4 @@
 <div class="hero" style="--hero-img: url({{hero.url}})">
-  <div class="hero__wrapper">
-    <img
-      src="{{ hero.url }}"
-      alt="{{ hero.alt }}"
-    />
-    <div class="hero__overlay" aria-hidden="true"></div>
-    <div class="hero__masthead o-center">
-      {% include "post-masthead.html" %}
-    </div>
-  </div>
+  <div class="hero__overlay" aria-hidden="true"></div>
+  <div class="hero__masthead o-center">{% include "post-masthead.html" %}</div>
 </div>
