--- a/src/assets/styles/base/_typography.css
+++ b/src/assets/styles/base/_typography.css
@@ -1,8 +1,8 @@
-h2,
-h3,
-h4,
-h5,
-h6 {
+.post h2,
+.post h3,
+.post h4,
+.post h5,
+.post h6 {
   text-indent: -1em; /* account for markdown-it-anchor permlink */
 }
 
