--- a/src/_layouts/blog-post.html
+++ b/src/_layouts/blog-post.html
@@ -5,7 +5,7 @@ includeSubscription: true
 ---
 
 {% set ledeTopMargin = "" %}
-<main id="main" class="o-center mb-12 post">
+<main id="main" class="o-center mb-12">
   <article class="o-stack s-post leading-relaxed">
     {% if not hero %}
     <div class="mt-24">
