UI theme refresh (#150)

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,7 +1,7 @@
-<footer class="text-base o-center mt-8 pb-16 font-sans text-gray-700">
-  <div class="o-stack text-center">
+<footer class="text-base o-center mt-8 pb-16 font-sans">
+  <div class="o-stack text-center text-gray-500">
     <p class="">&copy; 2020&thinsp;&ndash;&thinsp;{{ helpers.currentYear() }} Jan De Wilde &amp; John Peach</p>
-    <p>
+    <p class="text-primary">
       <a href="#top" class="u-border-current">↑ To Top</a>
       &middot;
       <a href="mailto:hi@wildpeaches.xyz" class="u-border-current">Email Us</a>
