--- a/src/_includes/post-masthead.html
+++ b/src/_includes/post-masthead.html
@@ -5,7 +5,7 @@
     {{ title }}
   </h1>
   {% if subtitle %}
-  <p class="leading-tight mt-4 text-2xl font-sans pb-8">
+  <p class="leading-snug mt-4 text-xl font-sans pb-8">
     <span class="sr-only">Subtitle:</span>
     {{ subtitle }}
   </p>
