--- a/src/_includes/subscription-form.html
+++ b/src/_includes/subscription-form.html
@@ -1,5 +1,5 @@
 <aside
-  class="font-sans p-4 text-base max-w-md o-center o-stack text-gray-800 bg-gray-100 sm:rounded-md "
+  class="font-sans p-4 text-base max-w-md o-center o-stack text-blue-800 bg-gray-100 sm:rounded-md "
   aria-labelledby="subscribe-and-stay-in-the-loop"
 >
   <div>
@@ -30,7 +30,7 @@
             type="email"
             name="email"
             id="email"
-            class="block sm:max-w-xs w-full px-4 py-3 text-base appearance-none border border-gray-300 shadow-none bg-white text-blue-900 rounded-md placeholder-gray-400 focus:outline-none focus:ring focus:border-blue-300 sm:rounded-none sm:rounded-l-md"
+            class="block sm:max-w-xs w-full px-4 py-3 text-base appearance-none border border-gray-300 shadow-none bg-white text-primary rounded-md placeholder-gray-400 focus:outline-none focus:ring focus:border-blue-300 sm:rounded-none sm:rounded-l-md"
             required
           />
           <button
