--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -1,17 +1,16 @@
 <script>
   if (navigator.serviceWorker) {
-    navigator.serviceWorker
-      .register('/service-worker.js')
-      .catch(function (error) {
-        console.error('Failure!', error);
-      });
+    navigator.serviceWorker.register('/service-worker.js').catch(function (error) {
+      console.error('Failure!', error);
+    });
   }
 </script>
 
 <!-- Cloudflare Web Analytics -->
-<script
+<!-- @TODO investigate console error, or possibly, don't bother with analytics -->
+<!-- <script
   defer
   src="https://static.cloudflareinsights.com/beacon.min.js"
-  data-cf-beacon='{"token": "4620249654094cefb81539074a053987"}'
-></script>
+  data-cf-beacon="{'token': '4620249654094cefb81539074a053987'}"
+></script> -->
 <!-- End Cloudflare Web Analytics -->
