--- a/src/assets/styles/base/_base.css
+++ b/src/assets/styles/base/_base.css
@@ -3,13 +3,8 @@
 *::after {
 }
 
-html {
-  font-size: 10px;
-}
-
 body {
-  @apply text-base overflow-x-hidden min-h-screen m-0 p-0 font-serif;
-  text-rendering: optimizeSpeed;
+  @apply overflow-x-hidden min-h-screen m-0 p-0;
 }
 
 p,
@@ -21,20 +16,15 @@ h5,
 h6,
 li,
 figcaption {
-  max-width: 55ch;
+  max-width: var(--measure);
 }
 
-/* h1 {@apply text-center;} */
 
 table {
-  @apply text-base w-full;
+  @apply w-full;
 }
 
-code[class*='language-'],
-pre[class*='language-'] {
-  @apply text-base;
-}
-
+@media (--from-medium-viewport) 
 pre,
 .table-wrapper {
   overflow-x: auto;
