--- a/src/assets/styles/layouts/_center.css
+++ b/src/assets/styles/layouts/_center.css
@@ -1,6 +1,6 @@
 /* https://every-layout.dev/layouts/center/ */
 
 .o-center {
-  max-width: 55ch;
+  max-width: var(--measure);
   @apply ml-auto mr-auto px-8 box-content;
 }
