--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -1,10 +1,5 @@
-<script>
-  if (navigator.serviceWorker) {
-    navigator.serviceWorker.register('/service-worker.js').catch(function (error) {
-      console.error('Failure!', error);
-    });
-  }
-</script>
+<script src="/assets/scripts/main.js"></script>
+
 
 <!-- Cloudflare Web Analytics -->
 <!-- @TODO investigate console error, or possibly, don't bother with analytics -->
@@ -14,3 +9,6 @@
   data-cf-beacon="{'token': '4620249654094cefb81539074a053987'}"
 ></script> -->
 <!-- End Cloudflare Web Analytics -->
+
+
+
