Add link to software page from software blocks

--- a/src/_layouts/blog-post.html
+++ b/src/_layouts/blog-post.html
@@ -83,8 +83,11 @@ includeSubscription: true
           <p>We don't seem to have documented {{ softwareInPost }} on wildpeaches.xyz yet. Maybe try <a href="https://google.com/search?q={{ softwareInPost }}" rel="external" target="_blank">a Google search</a>?</p>
           </div>
         {% endif %}
-
-      {%- endfor -%}
+        <p>
+        </p>
+        
+        {%- endfor -%}
+        <a href="/software/" rel="canonical">See all software used on wildpeaches →</a>
     </section>
     {%- endif -%}
 
